--- a/jenkinsfile
+++ b/jenkinsfile
@@ -59,6 +59,12 @@ pipeline {
                 }
             }
         }
+
+        stage('Build') {
+            steps {
+                sh 'mvn package'
+            }
+        }
         
         stage('Publish Artifact') {
             steps {
